[package]
edition = "2018"
name = "habit_tracking"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "habit_tracking"

[dependencies]
serde = "1"
derive_more = "0"
chrono = {version = "0.4", features = ["serde"]}

hdk = "0.0.118"
holo_hash = { version = "0.0.15", features = ["encoding"] }
